# MakeSense

./: README.md  main.py  pyproject.toml
eviot/encoders/: encoder.py
eviot/ot/: cost.py
eviot/query/: decompose.py
eviot/runners/: single_query.py
eviot/selection/: adaptive.py  greedy.py  set_builder.py  temporal.py
eviot/temporal/: temporal_builder.py  temporal_cost.py
eviot/utils/: score_check.py
ot_context/data/: slicing.py
ot_context/query/: decompose.py
ot_context/runners/: single_query.py
ot_context/selection/: adaptive.py  greedy.py  set_builder.py  temporal.py
ot_context/utils/: score_check.py
