[project]
name = "makesense"
version = "0.1.0"
description = "Optimal Transport based context retrieval module for LLM based chat/IR systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.0",
    "numpy>=2.3.5",
    "pip>=25.3",
    "pot>=0.9.6.post1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.11",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
